[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = ""
authors = ["Erwin Kuhn <erwin.kuhn@protonmail.com>"]
readme = "README.md"
packages = [{include = "llm_playground"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
